--- a/html/index.html
+++ b/html/index.html
@@ -69,9 +69,14 @@
                             route: './trails_manage.html',
                         },
                         {
-                        index: '1-5',
-                        name: '打卡记录',
-                        route: './cardRecord.html',
+                            index: '1-5',
+                            name: '步道列表记录',
+                            route: './trails_list.html',
+                        },
+                        {
+                            index: '1-6',
+                            name: '打卡记录',
+                            route: './cardRecord.html',
                         },
                     ]
                     // 
